<resources>
    <string name="app_name" translatable="false">Yomuki</string>
    <string name="title_home" translatable="false">Главная</string>
    <string name="title_bookmarks" translatable="false">Избранное</string>
    <string name="title_profile" translatable="false">Профиль</string>
    <string name="releases_updates" translatable="false">Последние обновления</string>
    <string name="full_updates_list">Полный список</string>
    <string name="releases_popular" translatable="false">Популярное</string>
    <string name="loading_text">Загрузка…</string>
    <string name="books_updates">Обновления</string>
    <string name="description">Описание</string>
    <string name="chapter_toolbar_text">Том %1$d Глава %2$d</string>
    <string name="image_loading_error">Не удалось загрузить страницу</string>
    <string name="medium_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="chapters">Содержание</string>
    <string name="volume">Том</string>
    <string name="chapter">Глава</string>
    <string name="read">Читать</string>
    <string name="title_activity_chapters">ChaptersActivity</string>
    <string name="search_hint">Поиск по названию</string>
    <string name="action_favorite">Добавить в избранное</string>
    <string name="action_share">Поделиться</string>
    <string name="chapter_pager">%1$d/%2$d</string>
    <string name="action_show_chapters">Показать содержание</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_message">Перед началом использования приложения следует выбрать каталог манги по умолчанию. Его можно изменить в настройках позже. \n\nКак это работает? \nМанга с выбранного вами каталога будет отображаться на главной странице приложеия и выбранный источник будет в приоритете поиска, однако если искомая книга не будет найдена Yomuki попробует поискать её в других источниках.</string>
    <string name="continue_button">Продолжить</string>
    <string name="default_source">Каталог по умолчанию</string>
    <string name="finish_kaomoji">⸜(｡˃ ᵕ ˂ )⸝</string>
    <string name="added_to_favourites">Добавлено в избранное</string>
    <string name="removed_from_favourites">Удалено из избранного</string>
    <string name="favourites">Избранное</string>
    <string name="no_descrription">Описание манги отсутствует.</string>
    <string name="no_contents">Не удалось загрузить ленту</string>
    <string name="no_favourites">Библиотека пуста</string>
    <string name="ongoing">Выпускается</string>
    <string name="completed">Завершён</string>
    <string name="unknown">Неизвестно</string>
    <string name="cancel">Отмена</string>
    <string name="explicit_content">Шокирующий контент</string>
    <string name="explicit_content_summary">Исключить шокирующий контент из рекомендаций и поиска</string>
    <string name="feedback_summary">Сообщить о проблеме в приложении или предложить ваши идеи</string>
    <string name="feedback">Отправить отзыв</string>
    <string name="preferences">Параметры</string>
    <string name="history">История</string>
    <string name="help">Помощь</string>
    <string name="general">Основное</string>
    <string name="about">О Приложении</string>
    <string name="default_source_summary">Каталог по умолчанию для главной страницы и поиска</string>
    <string name="explicit_content_title">Шокирующее содержание</string>
    <string name="explicit_content_message">Эта книга может иметь шорикующие элементы и контекст. Продолжить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_chapters">Главы не найдены</string>
</resources>