<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/selected_book_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:trackCornerRadius="10dp"
        app:showAnimationBehavior="outward"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/book_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/book_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/selected_book_cover_background"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/onepunchman"
                    app:layout_collapseMode="parallax"
                    android:foreground="@drawable/bg_book_cover_shadow"
                    android:contentDescription="@string/app_name" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    android:layout_gravity="bottom"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="#00000000">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="10dp"
                            app:cardCornerRadius="12dp">

                            <ImageView
                                android:id="@+id/selected_book_cover"
                                android:layout_width="112dp"
                                android:layout_height="165dp"
                                android:contentDescription="@string/app_name"
                                android:scaleType="centerCrop"
                                tools:srcCompat="@drawable/onepunchman" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="165dp"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/selected_book_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="2"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:text="Manga title" />

                            <TextView
                                android:id="@+id/selected_book_release_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                tools:text="1997" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <RatingBar
                                    android:id="@+id/selected_book_rating_bar"
                                    style="?android:attr/ratingBarStyleSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:progressTint="#FFC107"
                                    android:isIndicator="true"
                                    android:numStars="5"
                                    android:stepSize="0.1" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/selected_book_status_text"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:drawablePadding="5dp"
                                    android:orientation="horizontal"
                                    android:gravity="start|center_vertical"
                                    android:textColor="@color/tertiary"
                                    android:textSize="16sp"
                                    app:drawableLeftCompat="@drawable/ic_baseline_access_time_24"
                                    app:drawableTint="@color/tertiary"
                                    tools:text="Выпускается" />


                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/selected_book_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                android:clickable="true"
                tools:title="Title"
                app:layout_collapseMode="pin"
                android:focusable="true"
                app:menu="@menu/book_menu">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/selected_book_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selected_book_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textSize="16sp"
                    tools:text="@string/medium_text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/chapter_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/chapters_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chapters"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/book_chapters_list_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|center_vertical"
                        android:orientation="horizontal"
                        android:text="@string/full_updates_list"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/tertiary"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:drawableTint="@color/tertiary" />

                </LinearLayout>

                <TextView
                    android:id="@+id/no_chapters_label"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="32dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:text="@string/no_chapters"/>

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/selected_book_chapters_progress_bar"
                    android:padding="64dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:trackCornerRadius="10dp"
                    app:showAnimationBehavior="outward"
                    android:layout_gravity="center_horizontal|center_vertical"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/read_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:clickable="true"
        app:icon="@drawable/ic_baseline_play_arrow_24"
        android:text="@string/read"
        android:focusable="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>