<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catalogFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="homeFragment"
    tools:context=".ui.fragment.home.CatalogFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.search.SearchBar
                android:id="@+id/material_search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:contentDescription="@string/search_hint"
                android:clickable="true"
                android:focusable="true"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/updatesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/full_updates_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/releasesUpdatesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/releases_updates"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/updates_list_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:text="@string/full_updates_list"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/tertiary"
                        app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:drawableTint="@color/tertiary" />

                </LinearLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/updates_progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="50dp"
                        android:layout_gravity="center"
                        app:trackCornerRadius="10dp"
                        app:showAnimationBehavior="inward"
                        app:hideAnimationBehavior="outward"
                        android:indeterminate="true" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/updatesRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingStart="0dp"
                        android:paddingEnd="16dp"
                        android:scrollbars="none" />
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/catalogLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updatesLayout">

                <TextView
                    android:id="@+id/catalogText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/releases_popular"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/populars_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="150dp"
                        app:trackCornerRadius="10dp"
                        app:showAnimationBehavior="inward"
                        app:hideAnimationBehavior="outward"
                        android:indeterminate="true" />

                    <LinearLayout
                        android:id="@+id/populars_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@null"
                        android:orientation="vertical" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>